--- a/calculatorvue.html
+++ b/calculatorvue.html
@@ -5,5 +5,13 @@
 
 </head>
 <body>
+  <div id="app">
+    <p>x <input v-model="x"></p>
+    <p>y <input v-model="y"></p>
+    <p>---------------------</p>
+    <p>= <span v-text="result"></span></p>
+  </div>
+
+  <script src="https://unpkg.com/vue/dist/vue.js"></script>
 </body>
 </html>
