--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -2,15 +2,22 @@
   <head>
     <title>Vue.js Pet Depot</title>
     <script src="https://unpkg.com/vue"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/spp.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/app.css" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous" />
   </head>
   <body>
-    <div id="app"></div>
-
+    <div id="app">
+      <header>
+        <h1 v-text="sitename"></h1>
+      </header>
+    </div>
+    
     <script>
       var webstore = new Vue({
-        el: '#app'
+        el: '#app',
+        data: {
+          sitename: 'Vue.js Pet Depot'
+        }
       });
     </script>
   </body>
