--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -13,11 +13,54 @@
     </div>
     
     <script>
+      var APP_LOG_LIFECYCLE_EVENTS = true;
+
       var webstore = new Vue({
         el: '#app',
         data: {
           sitename: 'Vue.js Pet Depot'
+        },
+        beforeCreate: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("beforeCreate");
+          }
+        },
+        created: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("created");
+          }
+        },
+        beforeMount: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("beforeMount");
+          }
+        },
+        mounted: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("mounted");
+          }
+        },
+        beforeUpdate: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("beforeUpdate");
+          }
+        },
+        updated: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("updated");
+          }
+        },
+        beforeDestroy: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("beforeDestroy");
+          }
+        },
+        destroyed: function() {
+          if (APP_LOG_LIFECYCLE_EVENTS) {
+            console.log("destroyed");
+          }
         }
+
       });
     </script>
   </body>
