--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -1,15 +1,35 @@
 <html>
   <head>
-    <title>Vue.js Pet Depot</title>
-    <script src="https://unpkg.com/vue"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/app.css" />
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous" />
-  </head>
+  <title>Vue.js Pet Depot</title>
+  <script src="https://unpkg.com/vue"></script>
+  <link rel="stylesheet" type="text/css" href="assets/css/app.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+  <meta charset="UTF-8">
+</head>
   <body>
     <div id="app">
       <header>
-        <h1 v-text="sitename"></h1>
+        <div class="navbar navbar-default">
+          <div class="navbar-header">
+            <h1 v-text="sitename"></h1>
+          </div>
+        </div>
       </header>
+      <main>
+        <div class="row product">
+          <div class="col-md-2 col-md-offset-1">
+            <figure>
+              <img v-bind:src="product.image">
+            </figure>
+          </div>
+          <div class="col-md-6 col-md-offset-2 description">
+            <h1 v-text="product.title"></h1>
+            <p v-text="product.description"></p>
+            <p v-text="product.price" class="price"></p>
+          </div>
+        </div>
+      </main>
     </div>
     
     <script>
@@ -18,7 +38,14 @@
       var webstore = new Vue({
         el: '#app',
         data: {
-          sitename: 'Vue.js Pet Depot'
+          sitename: 'Vue.js Pet Depot',
+          product: {
+            id: 1001,
+            title: "Cat Food, 25lb bag",
+            description: "A 25 pound bag of <em>irresistible</em>," + "organic goodness for your cat.",
+            price: 2000,
+            image: "assets/images/product-fullsize.png"
+          }
         },
         beforeCreate: function() {
           if (APP_LOG_LIFECYCLE_EVENTS) {
