Add filters, add methods, remove lifecycle events

--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -25,8 +25,8 @@
           </div>
           <div class="col-md-6 col-md-offset-2 description">
             <h1 v-text="product.title"></h1>
-            <p v-text="product.description"></p>
-            <p v-text="product.price" class="price"></p>
+            <p v-html="product.description"></p>
+            <p class="price">{{ product.price | formatPrice }}</p>
           </div>
         </div>
       </main>
@@ -45,49 +45,31 @@
             description: "A 25 pound bag of <em>irresistible</em>," + "organic goodness for your cat.",
             price: 2000,
             image: "assets/images/product-fullsize.png"
-          }
+          },
+          cart: []
         },
-        beforeCreate: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("beforeCreate");
+        filters: {
+            formatPrice: function(price) {
+              if (!parseInt(price)) { return "" };
+              if (price > 99999) {
+                var priceString = (price / 100).toFixed(2);
+                var priceArray = priceString.split("").reverse();
+                var index = 3;
+                while (priceArray.length > index + 3) {
+                  priceArray.splice(index + 3, 0, ",");
+                  index += 4;
+                }
+                return "$" + priceArray.reverse().join("");
+              } else {
+                return "$" + (price / 100).toFixed(2);
+              }
+            }
+          },
+          methods: {
+            addToCart: function() {
+              this.cart.push( this.product.id );
+            }
           }
-        },
-        created: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("created");
-          }
-        },
-        beforeMount: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("beforeMount");
-          }
-        },
-        mounted: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("mounted");
-          }
-        },
-        beforeUpdate: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("beforeUpdate");
-          }
-        },
-        updated: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("updated");
-          }
-        },
-        beforeDestroy: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("beforeDestroy");
-          }
-        },
-        destroyed: function() {
-          if (APP_LOG_LIFECYCLE_EVENTS) {
-            console.log("destroyed");
-          }
-        }
-
       });
     </script>
   </body>
