Add availableInventory property, add canAddToCart computed property

--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -48,7 +48,8 @@
             title: "Cat Food, 25lb bag",
             description: "A 25 pound bag of <em>irresistible</em>," + "organic goodness for your cat.",
             price: 2000,
-            image: "assets/images/product-fullsize.png"
+            image: "assets/images/product-fullsize.png",
+            availableInventory: 5
           },
           cart: []
         },
@@ -77,6 +78,9 @@
           computed: {
             cartItemCount: function() {
               return this.cart.length || '';
+            },
+            canAddToCart: function() {
+              return this.product.availableInventory > this.cartItemCount;
             }
           }
       });
