Add checkout button and logic

--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -14,23 +14,32 @@
           <div class="navbar-header">
             <h1>{{ sitename }}</h1>
           </div>
-        </div>
-        <div class="nav navbar-nav navbar-right cart">
-          <span class="glyphicon glyphicon-shopping-cart">{{ cartItemCount }}</span>
+          <div class="nav navbar-nav navbar-right cart">
+            <button type="button" class="btn btn-default brn-lg" v-on:click="showCheckout">
+              <span class="glyphicon glyphicon-shopping-cart">{{ cartItemCount }}</span> Checkout
+            </button>
+          </div>
         </div>
       </header>
       <main>
         <div class="row product">
-          <div class="col-md-2 col-md-offset-1">
-            <figure>
-              <img v-bind:src="product.image">
-            </figure>
+          <div v-if="showProduct">
+            <div class="col-md-2 col-md-offset-1">
+              <figure>
+                <img v-bind:src="product.image">
+              </figure>
+            </div>
+            <div class="col-md-6 col-md-offset-2 description">
+              <h1 v-text="product.title"></h1>
+              <h5>{{ product.title }}</h5>
+              <p v-html="product.description"></p>
+              <p class="price">{{ product.price | formatPrice }}</p>
+              <button class="btn btn-primary btn-lg" v-on:click="addToCart" v-if="canAddToCart">Add to cart</button>
+              <button disabled="true" class="btn btn-primary btn-lg" v-else>Add To Cart</button>
+            </div>
           </div>
-          <div class="col-md-6 col-md-offset-2 description">
-            <h1 v-text="product.title"></h1>
-            <p v-html="product.description"></p>
-            <p class="price">{{ product.price | formatPrice }}</p>
-            <button class="default" v-on:click="addToCart" v-show="canAddToCart">Add to cart</button>
+          <div v-else>
+            <div class="col-md-2 col-md-offset-1"><p>fuck you andrew</p></div>
           </div>
         </div>
       </main>
@@ -42,6 +51,7 @@
       var webstore = new Vue({
         el: '#app',
         data: {
+          showProduct: true,
           sitename: 'Vue.js Pet Depot',
           product: {
             id: 1001,
@@ -54,35 +64,39 @@
           cart: []
         },
         filters: {
-            formatPrice: function(price) {
-              if (!parseInt(price)) { return "" };
-              if (price > 99999) {
-                var priceString = (price / 100).toFixed(2);
-                var priceArray = priceString.split("").reverse();
-                var index = 3;
-                while (priceArray.length > index + 3) {
-                  priceArray.splice(index + 3, 0, ",");
-                  index += 4;
-                }
-                return "$" + priceArray.reverse().join("");
-              } else {
-                return "$" + (price / 100).toFixed(2);
+          formatPrice: function(price) {
+            if (!parseInt(price)) { return "" };
+            if (price > 99999) {
+              var priceString = (price / 100).toFixed(2);
+              var priceArray = priceString.split("").reverse();
+              var index = 3;
+              while (priceArray.length > index + 3) {
+                priceArray.splice(index + 3, 0, ",");
+                index += 4;
               }
-            }
-          },
-          methods: {
-            addToCart: function() {
-              this.cart.push( this.product.id );
-            }
-          },
-          computed: {
-            cartItemCount: function() {
-              return this.cart.length || '';
-            },
-            canAddToCart: function() {
-              return this.product.availableInventory > this.cartItemCount;
+              return "$" + priceArray.reverse().join("");
+            } else {
+              return "$" + (price / 100).toFixed(2);
             }
           }
+        },
+        methods: {
+          addToCart: function() {
+            this.cart.push( this.product.id );
+          },
+          showCheckout() {
+            this.showProduct = this.showProduct ? false : true; 
+            console.log('clicked');
+          }
+        },
+        computed: {
+          cartItemCount: function() {
+            return this.cart.length || '';
+          },
+          canAddToCart: function() {
+            return this.product.availableInventory > this.cartItemCount;
+          }
+        }
       });
     </script>
   </body>
