--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -39,7 +39,20 @@
             </div>
           </div>
           <div v-else>
-            <div class="col-md-2 col-md-offset-1"><p>fuck you andrew</p></div>
+            <div class="col-md-6">
+              <strong>First Name:</strong>
+              <input v-model="order.firstName" class="form-control" />
+            </div>
+            <div class="col-md-6">
+              <strong>Last Name:</strong>
+              <input v-model="order.lastName" class="form-control" />
+            </div>
+            <div class="col-md-12 verify">
+              <pre>
+                First Name: {{ order.firstName }}
+                Last Name: {{ order.lastName }}
+              </pre>
+            </div>
           </div>
         </div>
       </main>
@@ -53,6 +66,10 @@
         data: {
           showProduct: true,
           sitename: 'Vue.js Pet Depot',
+          order: {
+            firstName: '',
+            lastName: ''
+          },
           product: {
             id: 1001,
             title: "Cat Food, 25lb bag",
