Add gift checkbox, add shipping method

--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -88,6 +88,20 @@
                         <input v-model="order.zip" class="form-control" />
                       </div>
                     </div>
+                    <div class="form-group">
+                      <div class="col-md-6 boxes">
+                        <input type="checkbox" id="gift" value="true" v-model="order.gift">
+                        <label for="gift">Ship As Gift?</label>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-md-6 boxes">
+                        <input type="radio" id="home" value="Home" v-model="order.method">
+                        <label for="home">Home</label>
+                        <input type="radio" id="business" value="Business" v-model="order.method">
+                        <label for="business">Business</label>
+                      </div>
+                    </div>
                     <div class="col-md-12 verify">
                       <pre>
                         First Name: {{ order.firstName }}
@@ -96,6 +110,8 @@
                         City: {{ order.city }}
                         Zip: {{ order.zip }}
                         State: {{ order.state }}
+                        Method: {{ order.method }}
+                        Gift: {{ order.gift }}
                       </pre>
                     </div>
                   </div>
@@ -113,7 +129,7 @@
       var webstore = new Vue({
         el: '#app',
         data: {
-          showProduct: true,
+          showProduct: false,
           sitename: 'Vue.js Pet Depot',
           order: {
             firstName: '',
@@ -121,7 +137,9 @@
             address: '',
             city: '',
             zip: '',
-            state: ''
+            state: '',
+            method: 'Home',
+            gift: false
           },
           product: {
             id: 1001,
