--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -50,23 +50,23 @@
                     <div class="form-group">
                       <div class="col-md-6">
                         <strong>First Name:</strong>
-                        <input v-model="order.firstName" class="form-control" />
+                        <input v-model.trim="order.firstName" class="form-control" />
                       </div>
                       <div class="col-md-6">
                         <strong>Last Name:</strong>
-                        <input v-model="order.lastName" class="form-control" />
+                        <input v-model.trim="order.lastName" class="form-control" />
                       </div>
                     </div>
                     <div class="form-group">
                       <div class="col-md-12"><strong>Address:</strong></div>
                       <div class="col-md-12">
-                        <input v-model="order.address" class="form-control" />
+                        <input v-model.trim="order.address" class="form-control" />
                       </div>
                     </div>
                     <div class="form-group">
                       <div class="col-md-12"><strong>City:</strong></div>
                       <div class="col-md-12">
-                        <input v-model="order.city" class="form-control" />
+                        <input v-model.trim="order.city" class="form-control" />
                       </div>
                     </div>
                     <div class="form-group">
@@ -81,7 +81,7 @@
                     <div class="form-group">
                       <div class="col-md-6 col-md-offset-4">
                         <strong>Zip / Postal Code:</strong>
-                        <input v-model="order.zip" class="form-control" />
+                        <input v-model.number="order.zip" class="form-control" type="number" />
                       </div>
                     </div>
                     <div class="form-group">
