--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -101,6 +101,7 @@
                     <div class="form-group">
                       <div class="col-md-6">
                         <button type="submit" class="btn btn-primary submit" v-on:click="submitForm">Place Order</button>
+                        <span class="test"></span>
                       </div>
                     </div>
                     <div class="col-md-12 verify">
