--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/app.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.js"></script>  
   <meta charset="UTF-8">
 </head>
   <body>
@@ -22,110 +23,116 @@
         </div>
       </header>
       <main>
-        <div class="row product">
-          <div v-if="showProduct">
-            <div class="col-md-2 col-md-offset-1">
-              <figure>
-                <img v-bind:src="product.image">
-              </figure>
-            </div>
-            <div class="col-md-6 col-md-offset-2 description">
-              <h1 v-text="product.title"></h1>
-              <h5>{{ product.title }}</h5>
-              <p v-html="product.description"></p>
-              <p class="price">{{ product.price | formatPrice }}</p>
-              <button class="btn btn-primary btn-lg" v-on:click="addToCart" v-if="canAddToCart">Add to cart</button>
-              <button disabled="true" class="btn btn-primary btn-lg" v-else>Add To Cart</button>
-              <span class="inventory-message" v-if="product.availableInventory - cartItemCount === 0">Sold Out!</span>
-              <span class="inventory-message" v-else-if="product.availableInventory - cartItemCount < 6">Only {{product.availableInventory - cartItemCount}} left!</span>
-              <span class="inventory-message" v-else>Buy Now!</span>
-              <div class="rating">
-                <span v-for="n in 5" v-bind:class="{'rating-active' : checkRating(n)}">☆</span>
+        <div v-if="showProduct">
+          <div v-for="product in products">
+            <div class="row">
+              <div class="col-md-5 col-md-offset-0">
+                <figure>
+                  <img class="product" v-bind:src="product.image">
+                </figure>
               </div>
-            </div>
-          </div>
-          <div v-else>
+              <div class="col-md-6 col-md-offset-0 description">
+                <h1 v-text="product.title"></h1>
+                <h5>{{ product.title }}</h5>
+                <p v-html="product.description"></p>
+                <p class="price">{{ product.price | formatPrice }}</p>
+                <button class="btn btn-primary btn-lg" v-on:click="addToCart(product)" v-if="canAddToCart(product)">Add to cart</button>
+                <button disabled="true" class="btn btn-primary btn-lg" v-else>Add To Cart</button>
+                <span class="inventory-message" v-if="product.availableInventory - cartCount(product.id) === 0">Sold Out!</span>
+                <span class="inventory-message" v-else-if="product.availableInventory - cartCount(product.id) < 6">Only {{product.availableInventory - cartCount(product.id)}} left!</span>
+                <span class="inventory-message" v-else>Buy Now!</span>
+                <div class="rating">
+                  <span v-for="n in 5" v-bind:class="{'rating-active' : checkRating(n, product)}">☆</span>
+                </div>
+              </div>
+            </div><!-- / row -->
+            <hr />
+          </div><!-- / v-for -->
+        </div><!-- / v-if -->
+        <div v-else>
+          <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="panel panel-info">
                 <div class="panel-heading">Pet Depot Checkout</div>
-                <div class="panel-body">
-                  <div class="form-group">
-                    <div class="col-md-12">
-                      <h4><strong>Enter Your Information</strong></h4>
-                    </div> 
+                  <div class="panel-body">
                     <div class="form-group">
-                      <div class="col-md-6">
-                        <strong>First Name:</strong>
-                        <input v-model.trim="order.firstName" class="form-control" />
-                      </div>
-                      <div class="col-md-6">
-                        <strong>Last Name:</strong>
-                        <input v-model.trim="order.lastName" class="form-control" />
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-12"><strong>Address:</strong></div>
                       <div class="col-md-12">
-                        <input v-model.trim="order.address" class="form-control" />
+                        <h4><strong>Enter Your Information</strong></h4>
+                      </div> 
+                      <div class="form-group">
+                        <div class="col-md-6">
+                          <strong>First Name:</strong>
+                          <input v-model.trim="order.firstName" class="form-control" />
+                        </div>
+                        <div class="col-md-6">
+                          <strong>Last Name:</strong>
+                          <input v-model.trim="order.lastName" class="form-control" />
+                        </div>
                       </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-12"><strong>City:</strong></div>
-                      <div class="col-md-12">
-                        <input v-model.trim="order.city" class="form-control" />
+                      <div class="form-group">
+                        <div class="col-md-12"><strong>Address:</strong></div>
+                        <div class="col-md-12">
+                          <input v-model.trim="order.address" class="form-control" />
+                        </div>
                       </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-2">
-                        <strong>State:</strong>
-                        <select v-model="order.state" class="form-control">
-                          <option disabled value="">State</option>
-                          <option v-for="(state, key, index) in states" v-bind:value="state">{{ key }}</option>
-                        </select>
+                      <div class="form-group">
+                        <div class="col-md-12"><strong>City:</strong></div>
+                        <div class="col-md-12">
+                          <input v-model.trim="order.city" class="form-control" />
+                        </div>
                       </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-6 col-md-offset-4">
-                        <strong>Zip / Postal Code:</strong>
-                        <input v-model.number="order.zip" class="form-control" type="number" />
+                      <div class="form-group">
+                        <div class="col-md-2">
+                          <strong>State:</strong>
+                          <select v-model="order.state" class="form-control">
+                            <option disabled value="">State</option>
+                            <option v-for="(state, key, index) in states" v-bind:value="state">{{ key }}</option>
+                          </select>
+                        </div>
                       </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-6 boxes">
-                        <input type="checkbox" id="gift" value="true" v-bind:true-value="order.sendGift" v-bind:false-value="order.dontSendGift" v-model="order.gift">
-                        <label for="gift">Ship As Gift?</label>
+                      <div class="form-group">
+                        <div class="col-md-6 col-md-offset-4">
+                          <strong>Zip / Postal Code:</strong>
+                          <input v-model.number="order.zip" class="form-control" type="number" />
+                        </div>
                       </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-6 boxes">
-                        <input type="radio" id="home" v-bind:value="order.home" v-model="order.method">
-                        <label for="home">Home</label>
-                        <input type="radio" id="business" v-bind:value="order.business" v-model="order.method">
-                        <label for="business">Business</label>
+                      <div class="form-group">
+                        <div class="col-md-6 boxes">
+                          <input type="checkbox" id="gift" value="true" v-bind:true-value="order.sendGift" v-bind:false-value="order.dontSendGift" v-model="order.gift">
+                          <label for="gift">Ship As Gift?</label>
+                        </div>
                       </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-md-6">
-                        <button type="submit" class="btn btn-primary submit" v-on:click="submitForm">Place Order</button>
-                        <span class="test"></span>
+                      <div class="form-group">
+                        <div class="col-md-6 boxes">
+                          <input type="radio" id="home" v-bind:value="order.home" v-model="order.method">
+                          <label for="home">Home</label>
+                          <input type="radio" id="business" v-bind:value="order.business" v-model="order.method">
+                          <label for="business">Business</label>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-md-12 verify">
-                      <pre>
-                        First Name: {{ order.firstName }}
-                        Last Name: {{ order.lastName }}
-                        Address: {{ order.address }}
-                        City: {{ order.city }}
-                        Zip: {{ order.zip }}
-                        State: {{ order.state }}
-                        Method: {{ order.method }}
-                        Gift: {{ order.gift }}
-                      </pre>
+                      <div class="form-group">
+                        <div class="col-md-6">
+                          <button type="submit" class="btn btn-primary submit" v-on:click="submitForm">Place Order</button>
+                          <span class="test"></span>
+                        </div>
+                      </div>
+                      <div class="col-md-12 verify">
+                        <pre>
+                          First Name: {{ order.firstName }}
+                          Last Name: {{ order.lastName }}
+                          Address: {{ order.address }}
+                          City: {{ order.city }}
+                          Zip: {{ order.zip }}
+                          State: {{ order.state }}
+                          Method: {{ order.method }}
+                          Gift: {{ order.gift }}
+                        </pre>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
+            </div><!-- / row -->
           </div><!-- / v-else -->
         </div>
       </main>
@@ -153,15 +160,7 @@
             sendGift: 'Send As A Gift',
             dontSendGift: 'Do Not Send As A Gift'
           },
-          product: {
-            id: 1001,
-            title: "Cat Food, 25lb bag",
-            description: "A 25 pound bag of <em>irresistible</em>," + "organic goodness for your cat.",
-            price: 2000,
-            image: "assets/images/product-fullsize.png",
-            availableInventory: 10,
-            rating: 3
-          },
+          products: [],
           states: {
             AL: "Alabama",
             AR: "Arkansas",
@@ -188,27 +187,42 @@
             }
           }
         },
+        created: function() {
+          axios.get('./products.json').then((response) => {
+            this.products = response.data.products;
+            console.log(this.products);
+          });
+        },
         methods: {
-          checkRating(n) {
-            return this.product.rating - n >= 0;
+          checkRating(n, myProduct) {
+            return myProduct.rating - n >= 0;
           },
           submitForm: function() {
             console.log('Submitted Order');
           },
-          addToCart: function() {
-            this.cart.push( this.product.id );
+          addToCart(aProduct) {
+            this.cart.push( aProduct.id );
           },
           showCheckout() {
             this.showProduct = this.showProduct ? false : true; 
             console.log('clicked');
+          },
+          canAddToCart(aProduct) {
+            return aProduct.availableInventory > this.cartCount(aProduct.id);
+          },
+          cartCount(id) {
+            let count = 0;
+            for (var i = 0; i < this.cart.length; i++) {
+              if (this.cart[i] === id) {
+                count++;
+              }
+            }
+            return count;
           }
         },
         computed: {
           cartItemCount: function() {
             return this.cart.length || '';
-          },
-          canAddToCart: function() {
-            return this.product.availableInventory > this.cartItemCount;
           }
         }
       });
