Add sortedProducts computed property

--- a/pet-depot/index.html
+++ b/pet-depot/index.html
@@ -24,7 +24,7 @@
       </header>
       <main>
         <div v-if="showProduct">
-          <div v-for="product in products">
+          <div v-for="product in sortedProducts">
             <div class="row">
               <div class="col-md-5 col-md-offset-0">
                 <figure>
@@ -223,6 +223,22 @@
         computed: {
           cartItemCount: function() {
             return this.cart.length || '';
+          },
+          sortedProducts: function() {
+            if(this.products.length > 0) {
+              let productsArray = this.products.slice(0);
+              function compare(a, b) {
+                if(a.title.toLowerCase() < b.title.toLowerCase()) {
+                  return -1;
+                }
+                if(a.title.toLowerCase() > b.title.toLowerCase()) {
+                  return 1;
+                }
+                return 0;
+              }
+              return productsArray.sort(compare);
+              
+            }
           }
         }
       });
