--- a/sandbox/render-function.html
+++ b/sandbox/render-function.html
@@ -19,7 +19,7 @@ Vue.component('my-comp', {
       'class': 'text-center',
       on: {
         click(e) {
-          alert('Clicked')
+          console.log('Clicked')
         }
       }
     },
